fix some errors